Panels and Functionalities

--- a/Reen/src/userinterface/ClaimsManager/ViewRespondersJPanel.form
+++ b/Reen/src/userinterface/ClaimsManager/ViewRespondersJPanel.form
@@ -2,9 +2,6 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
-    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-      <Color blue="d1" green="b4" id="Active Caption" palette="2" red="99" type="palette"/>
-    </Property>
     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[1245, 1000]"/>
     </Property>
@@ -43,7 +40,6 @@
                               <Component id="patientID2" alignment="1" min="-2" max="-2" attributes="0"/>
                               <Component id="patientID1" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="patientID" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       </Group>
@@ -54,16 +50,15 @@
                               <EmptySpace max="32767" attributes="0"/>
                               <Component id="btnAccept" min="-2" pref="113" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="patientIDTxt" alignment="0" max="32767" attributes="0"/>
+                          <Component id="respondersIDTxt" alignment="0" max="32767" attributes="0"/>
                           <Component id="userNameTxt" alignment="0" max="32767" attributes="0"/>
-                          <Component id="emailTxt" alignment="0" max="32767" attributes="0"/>
                           <Component id="messageTxt" alignment="0" min="-2" pref="384" max="-2" attributes="0"/>
                           <Component id="txtFundsRequired" alignment="0" min="-2" pref="384" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Component id="btnBack" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="346" max="32767" attributes="0"/>
+              <EmptySpace pref="329" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -79,14 +74,9 @@
                   <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="userNameTxt" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="emailTxt" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="patientIDTxt" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="respondersIDTxt" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="patientID" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
@@ -102,9 +92,9 @@
               <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="btnAccept" min="-2" pref="42" max="-2" attributes="0"/>
-                  <Component id="btnReject" max="32767" attributes="0"/>
+                  <Component id="btnReject" pref="44" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="420" max="32767" attributes="0"/>
+              <EmptySpace pref="422" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -120,27 +110,17 @@
     </Component>
     <Component class="javax.swing.JTextField" name="userNameTxt">
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel4">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Times New Roman" size="18" style="1"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="Email:"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="emailTxt">
-    </Component>
     <Component class="javax.swing.JLabel" name="patientID">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Times New Roman" size="18" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Patient ID"/>
+        <Property name="text" type="java.lang.String" value="Responders ID"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="patientIDTxt">
+    <Component class="javax.swing.JTextField" name="respondersIDTxt">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="patientIDTxtActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="respondersIDTxtActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="patientID1">
@@ -190,7 +170,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Times New Roman" size="24" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Birth Mother Approval"/>
+        <Property name="text" type="java.lang.String" value="Responders Approval"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnBack">
